TFS-336803 - Added age range cohort definition at latest encountert and handler logic for age columns filters